k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudana
  labels:
    app.kubernetes.io/part-of: cloudana
